feat: 新增成绩详情查询
